--- a/tut/index.html
+++ b/tut/index.html
@@ -20,6 +20,6 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="./main.js"></script>
+    <script src="./main-light.js"></script>
   </body>
 </html>
