--- a/getstarted/index.html
+++ b/getstarted/index.html
@@ -40,6 +40,6 @@
   </head>
   <body>
     <canvas id="renderCanvas"></canvas>
-    <script src="main.babylon.js"></script>
+    <script src="basic-house.babylon.js"></script>
   </body>
 </html>
