--- a/getstarted/index.html
+++ b/getstarted/index.html
@@ -49,14 +49,14 @@
   </head>
   <body>
     <canvas id="renderCanvas"></canvas>
-    <button onclick="exportVillage()">Export</button>
+    <!-- <button onclick="exportVillage()">Export</button> -->
     <script src="basic-house.babylon.js"></script>
-    <script>
+    <!-- <script>
       function exportVillage() {
         BABYLON.GLTF2Export.GLBAsync(scene, 'village').then((glb) => {
           glb.downloadFiles();
         });
       }
-    </script>
+    </script> -->
   </body>
 </html>
