--- a/getstarted/index.html
+++ b/getstarted/index.html
@@ -20,8 +20,7 @@
     <script src="https://preview.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
     <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
     <script src="https://preview.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-    <script src="https://preview.babylonjs.com/serializers/babylonjs.glTF2Serializer.js"></script>
-    <script src="babylon.glTFFileLoader.js"></script>
+    <script src="https://preview.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
 
     <style>
       html,
@@ -31,32 +30,28 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        display: flex;
+        position: relative;
       }
 
       #renderCanvas {
         width: 100%;
         height: 100%;
+        /* flex: 1; */
         touch-action: none;
-      }
-
-      button {
-        z-index: 1000;
-        position: absolute;
-        top: 16px;
-        left: 16px;
       }
     </style>
   </head>
   <body>
     <canvas id="renderCanvas"></canvas>
-    <!-- <button onclick="exportVillage()">Export</button> -->
-    <script src="basic-house.babylon.js"></script>
-    <!-- <script>
-      function exportVillage() {
-        BABYLON.GLTF2Export.GLBAsync(scene, 'village').then((glb) => {
+    <button onclick="exportModel()">Export</button>
+    <script src="build-a-car.js"></script>
+    <script>
+      function exportModel() {
+        BABYLON.GLTF2Export.GLBAsync(scene, 'car').then((glb) => {
           glb.downloadFiles();
         });
       }
-    </script> -->
+    </script>
   </body>
 </html>
