--- a/getstarted/index.html
+++ b/getstarted/index.html
@@ -44,8 +44,8 @@
   </head>
   <body>
     <canvas id="renderCanvas"></canvas>
-    <button onclick="exportModel()">Export</button>
-    <script src="build-a-car.js"></script>
+    <!-- <button onclick="exportModel()">Export</button> -->
+    <script src="collisions.js"></script>
     <script>
       function exportModel() {
         BABYLON.GLTF2Export.GLBAsync(scene, 'car').then((glb) => {
